# flu_prediction_neural_network

./: .gitignore  README.md  pyproject.toml
data/: patients.csv
src/flu_neural/: generate_data.py  main.py  train_model.py
