[project]
name = "flu-neural"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex B",email = "ab@alexertech.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "numpy (>=2.4.0,<3.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "flu_neural", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
